# magtag_weatherstation_rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  main.py  pyproject.toml
.cargo/: config.toml
resources/: weather_bg_296x128_1b.raw  weather_icons_20px_60x60_2b.raw  weather_icons_70px_210x210_2b.raw
scripts/: generate_1bpp_raw_image.py  generate_2bpp_raw_image.py
src/: config.rs  display.rs  error.rs  graphics.rs  http.rs  lib.rs  main.rs  network.rs  sleep.rs  time.rs
src/network/: http.rs  mod.rs
src/tasks/: display.rs  network.rs  sleep.rs  weather.rs
src/weather/: api.rs  display.rs  graphics.rs  http.rs  mod.rs  model.rs  ui.rs
