[package]
edition = "2024"
name = "magtag_weatherstation"
rust-version = "1.88"
version = "0.1.0"

[features]
default = ["graphical"]
graphical = []

[lib]
harness = false

[[bin]]
name = "magtag_weatherstation"
path = "./src/bin/main.rs"
test = false

[dependencies]
esp-hal = { version = "1.0.0", features = [
  "esp32s2",
  "log-04",
  "unstable",
  "psram",
] }

esp-rtos = { version = "0.2.0", features = [
  "esp-alloc",
  "esp-radio",
  "esp32s2",
  "log-04",
  "embassy",
] }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s2", "log-04"] }
log = "0.4.29"

esp-alloc = { version = "0.9.0", features = ["nightly"] }
esp-backtrace = { version = "0.18.1", features = [
  "esp32s2",
  "panic-handler",
  "println",
] }
esp-println = { version = "0.16.1", features = ["esp32s2", "log-04"] }
esp-radio = { version = "0.17.0", features = [
  "esp-alloc",
  "esp32s2",
  "log-04",
  "smoltcp",
  "unstable",
  "wifi",
] }

# custom dependencies
ssd1680 = { git = "https://github.com/ScottCUSA/ssd1680.git", branch = "main" }
heapless = { version = "0.9.2", features = ["serde"] }
embedded-hal-bus = "0.3.0"
static_cell = "2.1.1"

# JSON parsing in no_std
serde = { version = "1.0", features = ["derive"], default-features = false }
serde-json-core = "0.6"

# Text layout for embedded-graphics (wrapping, alignment, textbox)
embedded-graphics = "0.8.1"
embedded-text = "0.7"
tinybmp = "0.7.0"
once_cell = { version = "1.21.3", features = [
  "critical-section",
], default-features = false }

# Embassy for async tasks
embassy-executor = "0.9.1"
embassy-time = "0.5.0"
embassy-net = { version = "0.7.1", features = ["dhcpv4", "tcp", "udp", "dns"] }
embedded-io-async = "0.6.1"
percent-encoding = { version = "2.3.2", default-features = false }

# embassy-sync = { version = "0.7.2", features = ["log"] }

# # tests
# embedded-test-linker-script = { version = "0.1.0" }

# [dev-dependencies]
# embedded-test = { version="0.7.0", features = ["embassy", "external-executor"]}
# rtt-target = { version = "0.6.1", features = ["log"] }
# semihosting = { version = "0.1.20", features = ["openocd-semihosting"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
