[package]
edition = "2024"
name = "magtag_weatherstation"
rust-version = "1.88"
version = "0.1.0"

[lib]
harness = false

[[bin]]
name = "magtag_weatherstation"
path = "./src/bin/main.rs"
test = false

[features]
# "display-ssd1680" targets the 2025 edition MagTag with the SSD1680 controller.
# "display-il0373" targets the original MagTag with the IL0373 controller.
# Exactly one must be enabled; enabling both or neither is a compile error.
default = ["display-ssd1680"]
display-ssd1680 = []
display-il0373 = []

[dependencies]
# eps32 dependencies
esp-hal = { version = "1.0.0", features = [
  "esp32s2",
  "log-04",
  "unstable",
  "psram",
] }
esp-rtos = { version = "0.2.0", features = [
  "esp-alloc",
  "esp-radio",
  "esp32s2",
  "log-04",
  "embassy",
] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s2", "log-04"] }
esp-alloc = { version = "0.9.0", features = ["nightly"] }
esp-backtrace = { version = "0.18.1", features = [
  "esp32s2",
  "panic-handler",
  "println",
] }
esp-println = { version = "0.16.1", features = ["esp32s2", "log-04"] }
esp-radio = { version = "0.17.0", features = [
  "esp-alloc",
  "esp32s2",
  "log-04",
  "smoltcp",
  "unstable",
  "wifi",
] }

log = "0.4.29"
embedded-hal-bus = "0.3.0"
static_cell = "2.1.1"
time = { version = "0.3.47", default-features = false }
thiserror = { version = "2.0.18", default-features = false }

# display driver crate
epd-datafuri = "0.1.1"

# JSON parsing in no_std
serde = { version = "1.0.228", features = [
  "derive",
  "alloc",
], default-features = false }
serde-json-core = "0.6"

# drawing handled by embedded-graphics (wrapping, alignment, textbox)
embedded-graphics = "0.8.2"
embedded-text = "0.7.3"
once_cell = { version = "1.21.4", features = [
  "critical-section",
], default-features = false }

# Embassy for async and network tasks
embassy-executor = "0.9.1"
embassy-time = "0.5.0"
embassy-net = { version = "0.8", features = ["dhcpv4", "tcp", "udp", "dns"] }
heapless = { version = "0.8.0", features = ["serde"] }
embedded-io-async = "0.7"
percent-encoding = { version = "2.3.2", default-features = false }
embassy-sync = "0.7.2"
embassy-futures = "0.1.2"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
